test/tests/stages/14_pointers/invalid_types/address_of_constant.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(ptr)
  =
  &
  const int(10)
  ;
  return
  const int(0)
  ;
  }
